--- a/.github/workflows/windows-pyoxidizer.yml
+++ b/.github/workflows/windows-pyoxidizer.yml
@@ -1,16 +1,20 @@
-name: Build Windows EXE (PyOxidizer + FULL MSVC + LLVM)
+name: Windows EXE (PyOxidizer + FULL MSVC + LLVM)
 
 on:
   workflow_dispatch:
     inputs:
       version:
-        description: "Versão (tag) ex.: v1.0.0"
+        description: "Versão (tag), ex.: v1.0.0"
         required: true
         type: string
-      publish_release:
-        description: "Publicar Release no GitHub?"
-        default: true
+      tag_repository:
+        description: "Criar e enviar tag?"
         type: boolean
+        default: true
+      publish_release:
+        description: "Publicar Release?"
+        type: boolean
+        default: true
 
 permissions:
   contents: write
@@ -20,44 +24,62 @@ jobs:
     runs-on: windows-latest
 
     steps:
-    # ---------------------------------------------------------------
+    # ------------------------------------------------------------
     # CHECKOUT
-    # ---------------------------------------------------------------
-    - name: Checkout
+    # ------------------------------------------------------------
+    - name: Checkout repository
       uses: actions/checkout@v4
       with:
         fetch-depth: 0
 
-    # ---------------------------------------------------------------
-    # DEFINIR VERSÃO / APP_NAME
-    # ---------------------------------------------------------------
-    - name: Compute version
+    # ------------------------------------------------------------
+    # DEFINIR APP_VER E APP_NAME
+    # ------------------------------------------------------------
+    - name: Compute version and names
       shell: pwsh
       run: |
         $ver = "${{ inputs.version }}"
         "APP_VER=$ver" | Out-File -FilePath $env:GITHUB_ENV -Encoding utf8 -Append
+
         $repo = "${{ github.repository }}".Split("/")[1]
         "APP_NAME=$repo" | Out-File -FilePath $env:GITHUB_ENV -Encoding utf8 -Append
-        Write-Host "APP_VER=$ver"
-        Write-Host "APP_NAME=$repo"
 
-    # ---------------------------------------------------------------
+        Write-Host "Versão: $ver"
+        Write-Host "APP_NAME: $repo"
+
+    # ------------------------------------------------------------
+    # CRIAR TAG (OPCIONAL)
+    # ------------------------------------------------------------
+    - name: Create and push tag
+      if: ${{ inputs.tag_repository }}
+      shell: bash
+      run: |
+        set -e
+        git config user.name "github-actions[bot]"
+        git config user.email "41898282+github-actions[bot]@users.noreply.github.com"
+
+        VER="${APP_VER}"
+        echo "Criando tag: $VER"
+
+        git tag -a "$VER" -m "Release $VER" || true
+        git push origin "$VER" || true
+
+    # ------------------------------------------------------------
     # INSTALAR VISUAL STUDIO BUILD TOOLS COMPLETO
-    # ---------------------------------------------------------------
-    - name: Install Visual Studio Build Tools (full C++ & SDK)
+    # ------------------------------------------------------------
+    - name: Install Visual Studio Build Tools (FULL)
       shell: pwsh
       run: |
-        Write-Host "Instalando Visual Studio Build Tools (isso leva ~10-15 minutos)..."
         choco install visualstudio2022buildtools --package-parameters `
           "--add Microsoft.VisualStudio.Workload.VCTools `
-          --add Microsoft.VisualStudio.Component.VC.Tools.x86.x64 `
-          --add Microsoft.VisualStudio.Component.Windows10SDK.20348 `
-          --add Microsoft.VisualStudio.Component.Windows11SDK.22621 `
-          --quiet --norestart" -y
+           --add Microsoft.VisualStudio.Component.VC.Tools.x86.x64 `
+           --add Microsoft.VisualStudio.Component.Windows11SDK.22621 `
+           --add Microsoft.VisualStudio.Component.Windows10SDK.20348 `
+           --quiet --norestart" -y
 
-    # ---------------------------------------------------------------
+    # ------------------------------------------------------------
     # INSTALAR LLVM / CLANG
-    # ---------------------------------------------------------------
+    # ------------------------------------------------------------
     - name: Install LLVM (Clang)
       shell: pwsh
       run: |
@@ -65,53 +87,41 @@ jobs:
         refreshenv
         clang --version
 
-    # ---------------------------------------------------------------
-    # INSTALAR RUST TOOLCHAIN
-    # ---------------------------------------------------------------
-    - name: Install Rust (stable)
+    # ------------------------------------------------------------
+    # INSTALAR RUST
+    # ------------------------------------------------------------
+    - name: Install Rust
       uses: dtolnay/rust-toolchain@stable
       with:
         toolchain: stable
         components: rustfmt, clippy
 
-    - name: Check Rust
-      shell: pwsh
-      run: |
-        rustc -V
-        cargo -V
-
-    # ---------------------------------------------------------------
+    # ------------------------------------------------------------
     # CONFIGURAR PYTHON
-    # ---------------------------------------------------------------
+    # ------------------------------------------------------------
     - name: Setup Python
       uses: actions/setup-python@v5
       with:
         python-version: "3.10"
-        cache: "pip"
 
-    - name: Install Python dependencies
+    - name: Install Python requirements
       shell: pwsh
       run: |
         python -m pip install --upgrade pip
-        if (Test-Path requirements.txt) {
-          pip install -r requirements.txt
-        }
+        if (Test-Path "requirements.txt") { pip install -r requirements.txt }
 
-    # ---------------------------------------------------------------
-    # INSTALAR PYOXIDIZER (AGORA FUNCIONA)
-    # ---------------------------------------------------------------
+    # ------------------------------------------------------------
+    # INSTALAR PYOXIDIZER VIA PIP
+    # ------------------------------------------------------------
     - name: Install PyOxidizer
       shell: pwsh
-      env:
-        CARGO_NET_GIT_FETCH_WITH_CLI: "true"
       run: |
-        Write-Host "Instalando PyOxidizer via pip (isso vai compilar em Rust)..."
         pip install --upgrade pyoxidizer
+        pyoxidizer --version
 
-        Write-Host "Verificando instalação..."
-        python -m pyoxidizer --version
-
-    # DEBUG OPCIONAL – onde está o binário?
+    # ------------------------------------------------------------
+    # DEBUG OPCIONAL – localizar o binário
+    # ------------------------------------------------------------
     - name: Locate PyOxidizer binary
       shell: pwsh
       run: |
@@ -121,31 +131,29 @@ jobs:
         print(os.path.join(os.path.dirname(sys.executable),"Scripts"))
         EOF
         ).Trim()
+        Write-Host "Scripts: $scripts"
         if (Test-Path "$scripts/pyoxidizer.exe") {
-          Write-Host "ENCONTRADO: $scripts/pyoxidizer.exe"
+          Write-Host ">> pyoxidizer.exe encontrado em $scripts"
         } else {
-          Write-Host "NÃO ENCONTRADO no Scripts. Tentando buscar geral:"
+          Write-Host ">> Não encontrado no Scripts. Buscando no disco..."
           Get-ChildItem -Path C:\ -Filter "pyoxidizer.exe" -Recurse -ErrorAction SilentlyContinue -Force -Depth 4 | Select-Object -First 10 FullName
         }
 
-    # ---------------------------------------------------------------
-    # BUILD COM PYOXIDIZER
-    # ---------------------------------------------------------------
-    - name: Run PyOxidizer build
+    # ------------------------------------------------------------
+    # BUILD DO EXE COM PYOXIDIZER
+    # ------------------------------------------------------------
+    - name: Build EXE with PyOxidizer
       shell: pwsh
       env:
         PYOXIDIZER_SYSTEM_RUST: "1"
       run: |
-        Write-Host "Iniciando build do PyOxidizer..."
-        python -m pyoxidizer build --release --verbose *> pyoxidizer.log 2>&1
+        pyoxidizer build --release --verbose *> pyoxidizer.log 2>&1
 
     - name: Show PyOxidizer log tail
       if: always()
       shell: pwsh
       run: |
-        if (Test-Path pyoxidizer.log) {
-          Get-Content pyoxidizer.log -Tail 200
-        }
+        if (Test-Path pyoxidizer.log) { Get-Content pyoxidizer.log -Tail 200 }
 
     - name: Upload PyOxidizer log
       if: always()
@@ -154,29 +162,32 @@ jobs:
         name: pyoxidizer-log-${{ env.APP_VER }}
         path: pyoxidizer.log
 
-    # ---------------------------------------------------------------
-    # COLETAR EXE
-    # ---------------------------------------------------------------
+    # ------------------------------------------------------------
+    # COLETAR EXE FINAL
+    # ------------------------------------------------------------
     - name: Collect Windows EXE
       shell: pwsh
       run: |
         $exe = Get-ChildItem -Recurse build -Filter "*.exe" | Select-Object -First 1
-        if (-not $exe) { throw "Nenhum EXE encontrado!" }
+        if (-not $exe) { throw "Nenhum EXE gerado pelo PyOxidizer!" }
 
         New-Item dist -ItemType Directory -Force | Out-Null
         $dest = "dist/${{ env.APP_NAME }}-${{ env.APP_VER }}.exe"
         Copy-Item $exe.FullName $dest -Force
-        Write-Host "EXE final: $dest"
+        Write-Host "EXE criado: $dest"
 
-    - name: Upload artifact
+    # ------------------------------------------------------------
+    # ARTEFATO
+    # ------------------------------------------------------------
+    - name: Upload EXE artifact
       uses: actions/upload-artifact@v4
       with:
-        name: ${{ env.APP_NAME }}-${{ env.APP_VER }}
+        name: ${{ env.APP_NAME }}-${{ env.APP_VER }}-win
         path: dist/*.exe
 
-    # ---------------------------------------------------------------
-    # RELEASE (OPCIONAL)
-    # ---------------------------------------------------------------
+    # ------------------------------------------------------------
+    # RELEASE
+    # ------------------------------------------------------------
     - name: Publish GitHub Release
       if: ${{ inputs.publish_release }}
       uses: softprops/action-gh-release@v2
